chore: 文档错别字修改

--- a/docs/单测编写篇.md
+++ b/docs/单测编写篇.md
@@ -270,7 +270,7 @@ describe('formatTime', function () {
 
 ## 结论
 
-看懵逼了么？正是因为编写单测的过程非常繁琐，还得思考自己以前编写的时候压根没有想到的分支条件，可能写单测的时间还会多余编写源码的时间。
+看懵逼了么？正是因为编写单测的过程非常繁琐，还得思考自己以前编写的时候压根没有想到的分支条件，可能写单测的时间还会多于编写源码的时间。
 
 本篇所有代码在 [tag v0.0.4](https://github.com/everlose/tt-utils/tree/v0.0.4) 中, 给你参考。
 
