--- a/docs/单测编写篇.md
+++ b/docs/单测编写篇.md
@@ -274,8 +274,6 @@ describe('formatTime', function () {
 
 本篇所有代码在 [tag v0.0.4](https://github.com/everlose/tt-utils/tree/v0.0.4) 中, 给你参考。
 
-## 本系列所有文章
+上一篇：[npm包发布篇](https://github.com/everlose/tt-utils/blob/master/docs/npm%E5%8C%85%E5%8F%91%E5%B8%83%E7%AF%87.md)
 
-1. [项目初建篇](https://github.com/everlose/tt-utils/blob/master/docs/%E9%A1%B9%E7%9B%AE%E5%88%9D%E5%BB%BA%E7%AF%87.md)
-2. [npm包发布篇](https://github.com/everlose/tt-utils/blob/master/docs/npm%E5%8C%85%E5%8F%91%E5%B8%83%E7%AF%87.md)
-3. [单测编写篇](https://github.com/everlose/tt-utils/blob/master/docs/%E5%8D%95%E6%B5%8B%E7%BC%96%E5%86%99%E7%AF%87.md)
+下一篇：[md示例文档编写篇](https://github.com/everlose/tt-utils/blob/master/docs/md%E7%A4%BA%E4%BE%8B%E6%96%87%E6%A1%A3%E7%BC%96%E5%86%99%E7%AF%87.md)
