--- a/docs/项目初建篇.md
+++ b/docs/项目初建篇.md
@@ -289,8 +289,4 @@ export default {
 
 添加完第一个函数的版本在 [tag v0.0.2](https://github.com/everlose/tt-utils/tree/v0.0.2) 中
 
-## 本系列所有文章
-
-1. [项目初建篇](https://github.com/everlose/tt-utils/blob/master/docs/%E9%A1%B9%E7%9B%AE%E5%88%9D%E5%BB%BA%E7%AF%87.md)
-2. [npm包发布篇](https://github.com/everlose/tt-utils/blob/master/docs/npm%E5%8C%85%E5%8F%91%E5%B8%83%E7%AF%87.md)
-3. [单测编写篇](https://github.com/everlose/tt-utils/blob/master/docs/%E5%8D%95%E6%B5%8B%E7%BC%96%E5%86%99%E7%AF%87.md)
+下一篇：[npm包发布篇](https://github.com/everlose/tt-utils/blob/master/docs/npm%E5%8C%85%E5%8F%91%E5%B8%83%E7%AF%87.md)
