--- a/docs/项目初建篇.md
+++ b/docs/项目初建篇.md
@@ -1,8 +1,6 @@
 ## 前言
 
-看到公司里的大佬都纷纷写起vue相关的文章，有分析vue源码的，有定制ui库的，混在大佬中我感到既有压力又有动力，我也得写点什么。
-
-回想写业务这么长时间，总是有些函数需要粘贴来复制去，第三方提供的库总只是部分函数满足自己的需求，于是萌生了一个想法，何不如来定制一个专给自己用的库函数呢，放着我所有能从业务里抽象出来的函数。
+写业务这么长时间，总是有些函数需要粘贴来复制去，第三方提供的库总只是部分函数满足自己的需求，你是不是有一种想法，定制一个专给自己用的库函数呢，放着你所有能从业务里抽象出来的函数。或者你对其他库是不是感到好奇而无从得知这是怎么搭建起来的呢，本篇就来和你一步一步搭建一个库，做一个集成markdown文档，集成单测的完整项目。
 
 搭一个库有许许多多的细小的知识点，很难一篇讲的完碰上的所有障碍，于是我决定以写记事的形式来记载我每次的想法以及实现的步骤还有碰上的问题，所以文章会分很多篇，并且持续更新写上我最新放入的函数。
 
